// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ReportSection component correctly passes isFirstSection prop to collapsible component as defaultOpen false 1`] = `
<div
  className="pgn_collapsible shadow collapsible-card"
>
  <div
    aria-expanded={false}
    className="collapsible-trigger"
    onClick={[Function]}
    onKeyDown={[Function]}
    role="button"
    tabIndex={0}
  >
    <span>
      Download Reports
    </span>
    <span
      className="collapsible-icon"
    >
      <span
        className="pgn__icon"
      >
        <svg
          aria-hidden={true}
          fill="none"
          focusable={false}
          height={24}
          role="img"
          viewBox="0 0 24 24"
          width={24}
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M16.59 8.59 12 13.17 7.41 8.59 6 10l6 6 6-6-1.41-1.41Z"
            fill="currentColor"
          />
        </svg>
      </span>
    </span>
  </div>
  <div
    className="pgn-transition-replace-group position-relative"
    style={
      Object {
        "height": null,
      }
    }
  >
    <div
      style={
        Object {
          "padding": ".1px 0",
        }
      }
    >
      <div />
    </div>
  </div>
</div>
`;

exports[`ReportSection component correctly passes isFirstSection prop to collapsible component as defaultOpen true 1`] = `
<div
  className="pgn_collapsible shadow collapsible-card is-open"
>
  <div
    aria-expanded={true}
    className="collapsible-trigger"
    onClick={[Function]}
    onKeyDown={[Function]}
    role="button"
    tabIndex={0}
  >
    <span>
      Download Reports
    </span>
    <span
      className="collapsible-icon"
    >
      <span
        className="pgn__icon"
      >
        <svg
          aria-hidden={true}
          fill="none"
          focusable={false}
          height={24}
          role="img"
          viewBox="0 0 24 24"
          width={24}
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="m12 8-6 6 1.41 1.41L12 10.83l4.59 4.58L18 14l-6-6Z"
            fill="currentColor"
          />
        </svg>
      </span>
    </span>
  </div>
  <div
    className="pgn-transition-replace-group position-relative"
    style={
      Object {
        "height": null,
      }
    }
  >
    <div
      style={
        Object {
          "padding": ".1px 0",
        }
      }
    >
      <div
        className="collapsible-body"
      >
        <div
          className="container"
        >
          <div
            className="fade alert-content alert alert-info show"
            role="alert"
          >
            <div
              className="pgn__alert-message-wrapper"
            >
              <div
                className="alert-message-content"
              >
                The data contained in these reports reflect enrollments only and are not intended to be used for financial reporting or reconciliation.
              </div>
            </div>
          </div>
          <div>
            <a
              href="example.com/one-report"
              id="console-report"
              onClick={[Function]}
            >
              one-report
            </a>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ReportSection component doesn't render contents when empty program key is passed in 1`] = `null`;

exports[`ReportSection component doesn't render contents when no program data is passed in 1`] = `null`;

exports[`ReportSection component renders contents when program data is passed in 1`] = `
<div
  className="pgn_collapsible shadow collapsible-card is-open"
>
  <div
    aria-expanded={true}
    className="collapsible-trigger"
    onClick={[Function]}
    onKeyDown={[Function]}
    role="button"
    tabIndex={0}
  >
    <span>
      Download Reports
    </span>
    <span
      className="collapsible-icon"
    >
      <span
        className="pgn__icon"
      >
        <svg
          aria-hidden={true}
          fill="none"
          focusable={false}
          height={24}
          role="img"
          viewBox="0 0 24 24"
          width={24}
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="m12 8-6 6 1.41 1.41L12 10.83l4.59 4.58L18 14l-6-6Z"
            fill="currentColor"
          />
        </svg>
      </span>
    </span>
  </div>
  <div
    className="pgn-transition-replace-group position-relative"
    style={
      Object {
        "height": null,
      }
    }
  >
    <div
      style={
        Object {
          "padding": ".1px 0",
        }
      }
    >
      <div
        className="collapsible-body"
      >
        <div
          className="container"
        >
          <div
            className="fade alert-content alert alert-info show"
            role="alert"
          >
            <div
              className="pgn__alert-message-wrapper"
            >
              <div
                className="alert-message-content"
              >
                The data contained in these reports reflect enrollments only and are not intended to be used for financial reporting or reconciliation.
              </div>
            </div>
          </div>
          <div>
            <a
              href="example.com/first-report"
              id="console-report"
              onClick={[Function]}
            >
              first-report
            </a>
          </div>
          <div>
            <a
              href="example.com/second-report"
              id="console-report"
              onClick={[Function]}
            >
              second-report
            </a>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ReportSection component renders with the most basic props passed to it 1`] = `null`;
